# ocx-protocol

./: .dockerignore  .env.example  .env.prod  .gitignore  .golangci.yml  .impeccable.md  AD2_PATTERN_MULTIPLICATION_COMPLETE.md  ADVANCED_FEATURES_SUCCESS.md  API_KEYS_SETUP_GUIDE.md  AUDIT_SUMMARY.md  BULLETPROOF_SUMMARY.md  CFO_DASHBOARD_INTEGRATION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_ENTERPRISE_INTEGRATION_SUMMARY.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_OCX_SYSTEM_IMPLEMENTATION.md  COMPLETE_WORKING_DEMO.sh  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_PROJECT_AUDIT.md  COMPREHENSIVE_SETUP_GUIDE.md  COMPREHENSIVE_SYSTEM_AUDIT.md  COMPREHENSIVE_TEST_ANALYSIS.md  CONTRIBUTING.md  CONVERT_TO_WORD_GUIDE.md  CORE_INFRASTRUCTURE_STATUS.md  CROSS_ARCHITECTURE_TEST_PLAN.md  DATABASE_INTEGRATION_SUCCESS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.api  Dockerfile.complete  Dockerfile.frontend  Dockerfile.rust  ENHANCED_GATEWAY_SUMMARY.md  ENTERPRISE_API_INTEGRATION_SUMMARY.md  ENTERPRISE_DOCUMENTATION_INTEGRATION.md  FAIRNESS.md  FINAL_IMPLEMENTATION_COMPLETE.md  (+166 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci-simplified.yml  ci.yml  determinism.yml  fortune500-tests.yml  ocx-receipt.yml  ocx-receipts.yml  smoke-test.yml
adapters/ad3-envoy/: CMakeLists.txt  Makefile  config.cc  envoy_filter.cc  envoy_filter.proto  main.go
adapters/ad3-envoy/src/: config.cc  config.h  envoy_filter.cc  envoy_filter_simple.cc  envoy_filter_standalone.cc
adapters/ad4-github/: action.yml  package-lock.json  package.json  webpack.config.js
adapters/ad5-terraform/: Makefile  go.mod  main.go  main_simple.go  provider.go  terraform-provider-ocx
adapters/ad6-kafka/: dependency-reduced-pom.xml  interceptor.go  pom.xml
api/: .env.example  Dockerfile  LEMONSQUEEZY_SETUP.md  README.md  init_db.py  openapi.yaml  pyproject.toml  railway.json  schema.sql
api/app/: auth.py  config.py  db.py  email.py  ffi_verify.py  lemonsqueezy.py  main.py  models.py  tiers.py
api/app/routes/: checkout.py  portal.py  verify.py  webhooks.py
artifacts/: demo.sh  hello.sh  net.sh  network_test.sh  reputation-aggregator.wasm  syscall.sh
benchmarks/: RESULTS.md  benchmark_test.go
cmd/api-server/: go.mod  go.sum  main.go
cmd/cli/: main.go
cmd/debug-server/: main.go
cmd/final-server/: main.go
cmd/minimal-cli/: Dockerfile  main.go  verify.go
cmd/minimal-server/: main.go
cmd/mock-server/: main.go
cmd/ocx-advanced-server/: main.go
cmd/ocx-complete-demo/: main.go
cmd/ocx-config/: main.go
cmd/ocx-core-server/: enhanced_server.go  main.go
cmd/ocx-db-server/: main.go
cmd/ocx-gpu-test/: main.go
cmd/ocx-killer-demo/: main.go
cmd/ocx-safety-check/: main.go
cmd/ocx-server/: main.go
cmd/ocx-simple-demo/: main.go
cmd/ocx-unified-server/: main.go
cmd/ocx-verifier/: main.go
config/: config.go
conformance/: conformance_test.go  cross_language_test.go  deterministic_test.go  generate_vectors.go  generate_vectors_canonical.go  generate_vectors_final.go  generate_vectors_fixed.go  generate_vectors_integer_keys.go  generate_vectors_manual.go  vectors.go
contracts/: foundry.toml
demo/: DEMO.sh  determinism_demo.go
deployment/: docker-compose.yml
docs/: API_REFERENCE.md  BUILD_SYSTEM_GUIDE.md  MATH_WEDGE.md  OCX_PROTOCOL_WHITEPAPER.md  OCX_VALUE_PROPOSITION.md  REPOSITORY_CLEANUP_COMPLETE.md  ROADMAP_FRONTIER.md  VISION_AUTHENTICITY_PRIMITIVE.md  WEBSITE_AUDIT_REPORT.md  WITNESS_PROTOCOL_DESIGN_QUESTIONS.md  architecture-diagram.html  architecture-diagram.md  index.md  receipts.md  spec-v1.md
examples/: sidecar-pod.yaml  test-pod.yaml
fixtures/: end-to-end-example.json
ideas/: 00-thesis.md  01-temporal-primitives.md  02-thompson-insight.md  03-self-hosting-bootstrap.md  04-synthesis.md  05-multidisciplinary.md  README.md
integrations/: rate_limiter.go  reputation_fetcher.go
k8s/: deployment.yaml  postgres.yaml  secrets.yaml  service.yaml
keys/: 09fc4ca585011495.json  09fc4ca585011495.key  8d42905855072bf4.json  8d42905855072bf4.key  ocx_public.b64  ocx_signing.pem  server_key.raw  server_signing.pem
libocx-verify/: Cargo.toml  build.rs  ocx_verify.h  test_parser.rs
libocx-verify-wasm/: Cargo.toml
libocx-verify-wasm/src/: lib.rs
libocx-verify/benches/: dual_crypto_performance.rs
libocx-verify/src/: canonical_cbor.rs  debug.rs  error.rs  ffi.rs  lib.rs  receipt.rs  spec.rs  verify.rs
libocx-verify/src/vdf/: error.rs  mod.rs  params.rs  wesolowski.rs
libocx-verify/tests/: demo.rs  golden_vectors.rs  performance_test.rs  test_canonical_cbor.rs  test_ffi.rs  test_receipt.rs  test_receipt_simple.rs  test_simple_cbor.rs  test_verify.rs
modules/reputation/: Cargo.toml  Makefile
modules/reputation/src/: aggregation.rs  lib.rs  types.rs
modules/reputation/tests/: determinism_test.rs
ocx-enterprise-fixed/: README.md
ops/: key-registry.json  prometheus.yml  run-loadtests.sh
posters/: OCX_Architecture_A3_Poster.md
public/: _redirects  index.html
scripts/: coverage.sh  deploy-webhook.sh  determinism.sh  eliminate_placeholders.sh  fix-docker-permissions.sh  generate-certs.sh  init-db.sql  install-complete-envoy-headers.sh  install-envoy-deps.sh  install.sh  pi_diagnostics.sh  repo_audit_collect.sh  smoke-determinism.sh  smoke-test.sh  smoke.sh  test-injection.sh  test_rtx5060.sh
security-keys/: initial-key.priv  initial-key.pub
src/: App.js  index.css
store/: db_test.go  migrate.go  repo.go
tests/: README.md  fortune500-test-suite.sh  load-test.sh  run_tests.sh  security-test.sh  test_runner.go
web/: FORM_SETUP.md  dashboard.html  index.html  request.html
whitepaper/: README.md  paper.tex
whitepaper-tests/: CROSS_VENDOR_DETERMINISM_BENCHMARK.md  PRE_PAPER_ROADMAP.md  SOUNDNESS_PROOF.md  TEST_PLAN.md  TEST_RESULTS.md  adversarial_soundness.py  aggregate_determinism_evidence.py  bench_verify.py  cross_language_roundtrip.go  cross_language_roundtrip.py  longrun_stability.py  vllm_determinism.py
whitepaper-validation/: README.md
(+613 files in other folders)
