[package]
name = "libocx-verify"
version = "0.1.0"
edition = "2021"
description = "A lightweight, high-assurance verifier for OCX cryptographic receipts."
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"] # For FFI, static linking, and Rust use.

[features]
default = ["ffi"]
ffi = []
trace = []

[dependencies]
ring = { version = "0.17", default-features = false, features = ["std", "alloc"] } # Crypto primitives.
ed25519-dalek = { version = "2.0", features = ["rand_core"] } # Dual-library verification.
hex = "0.4" # Hex encoding for debug output.
base64 = "0.21" # Base64 encoding/decoding for key management.
serde = { version = "1.0", features = ["derive"] } # Serialization framework.
serde_json = "1.0" # JSON parsing for configuration files.
serde_cbor = "0.11" # CBOR serialization/deserialization.
ciborium = "0.2" # CBOR serialization/deserialization.
num-bigint = "0.4" # Arbitrary precision integers for VDF.
num-traits = "0.2" # Numeric trait helpers for VDF.
num-integer = "0.1" # Integer math (gcd, etc.) for VDF.
sha2 = "0.10" # SHA-256 for VDF challenge derivation.

[dev-dependencies]
tempfile = "3.0" # Temporary files for tests.
criterion = { version = "0.5", features = ["html_reports"] } # Performance benchmarking.

[build-dependencies]
cc = "1.0" # For compiling the C header shim.