[package]
name = "trustscore-wasm"
version = "0.1.0"
edition = "2021"
description = "Deterministic reputation aggregation WASM module for OCX TrustScore"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # Smaller binary size
strip = true          # Remove debug symbols

[profile.dev]
opt-level = 1         # Faster debug builds
